fix(z-index): Fix all z-index related issues

--- a/packages/core/src/components/tk-select/tk-select.scss
+++ b/packages/core/src/components/tk-select/tk-select.scss
@@ -10,7 +10,7 @@ tk-select {
     border-radius: 16px;
     border: 1px solid var(--border-light);
     background: var(--static-light);
-    z-index: 99;
+    z-index: 800;
     box-shadow: var(--effect-1-default-sm);
 
     .dropdown-item-holder {
